# TravisCI-test

./: .travis.yml  README.md  configure.ac
m4/: lx_find_mpi.m4
src/: Makefile.am  pmpi.cpp
test/: Makefile.am  mpi_test.cpp
travis-test/: test.sh
